--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "src/app.js",
     "dev": "nodemon src/app.js",
-    "test":"set NODE_OPTIONS=--experimental-vm-modules && jest"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
