--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=16.20.1"
+  },
   "dependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
@@ -23,4 +26,5 @@
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
+  
 }
